# domino-core

./: .gitignore  Cargo.toml  LICENSE
domino-cli/: Cargo.toml
domino-cli/src/: main.rs
domino-lib/: Cargo.toml
domino-lib/src/: lib.rs
domino-lib/src/classify/: complexity_class.rs  formula.rs  mod.rs
domino-lib/src/generate/: mod.rs
domino-lib/src/generate_valid/: mod.rs
domino-lib/src/solve/: mod.rs
domino-lib/src/solve/model/: helpers.rs  mod.rs  variables.rs
domino-lib/src/tests/: mod.rs
domino-lib/src/utils/: error.rs  get_n.rs  types.rs
domino-lib/src/utils/execute_model/: adapter.rs  parser.rs  translator.rs
domino-lib/src/utils/graphs/: get_missing_tiles.rs
domino-lib/src/utils/graphs/graph_functions/: find_eulerian_cycle.rs  mod.rs
domino-lib/src/utils/graphs/graph_functions/hierholzer/: first_node.rs  hierholzer.rs
domino-lib/src/utils/graphs/graph_types/: arc.rs  mod.rs
domino-lib/src/validate/: mod.rs
domino-lib/src/validate/model/: helpers.rs  mod.rs  variables.rs
domino-lib/tests/: mod.rs
domino-lib/tests/benches/: mod.rs
plant_uml/: classify_activity.puml  generate_activity.puml  generate_valid_activity.puml  lib_structure.puml  solve_activity.puml  validate_activity.puml
plant_uml/generate_valid/: generate_valid_activity.puml  hamiltonian_path.puml  hamiltonian_paths.puml  style_macros.puml
src/: lib.rs
src/classify/: complexity_class.rs  formula.rs  mod.rs
src/domino_types/: mod.rs  puzzle.rs  solution.rs  tile.rs  tileset.rs
src/functionalities/: classify.rs  common.rs  generate.rs  graph_common.rs  mod.rs  solve.rs  validate.rs
src/generate/: mod.rs
src/generate_valid/: hamiltonian.rs  hamiltonians.rs  hamitonians.rs  mod.rs  reinsert.rs
src/graph_models/: classify_puzzle.rs  generate_puzzle.rs  mod.rs  validate_puzzle.rs
src/graph_models/generate_sequence/: hierholzer.rs  mod.rs  sequence.rs
src/graph_models/graph_types/: aux_graph.rs  di_graph.rs  graph.rs  helpers.rs  mod.rs  pog_graph.rs  regular_graph.rs  under_graph.rs
src/graph_models/solve_puzzle/: coloring.rs  hierholzer.rs  mod.rs  solve_planar.rs
src/graphs/: classify.rs  common.rs  generate.rs  graph_common.rs  mod.rs  solve.rs  validate.rs
src/graphs/graph_common/: mod.rs  next_node.rs
src/lp_models/: generate_puzzle.rs  mod.rs
src/lp_models/classify_puzzle_model/: mod.rs
src/lp_models/generate_sequence_model/: mod.rs  parse.rs
src/lp_models/validate_puzzle_models/: mod.rs
src/lps/: mod.rs
src/model_execution_lib/: adapter.rs  mod.rs  parser.rs
src/solve/: mod.rs
src/types/: error.rs  mod.rs
src/unit_tests/: mod.rs
src/utils/: error.rs  get_n.rs  mod.rs  types.rs
src/validate/: mod.rs
tests/: classify.rs  generate_puzzle.rs  generate_sequence.rs  mod.rs  solve.rs  validate.rs
tests/benches/: bencher.rs  mod.rs
(+42 files in other folders)
