[package]
name = "domino-lib"
description = "Domino library, create sequences and puzzles, solve and validate them in rust"
license = "MIT"
version = "0.1.1"
edition = "2021"
authors = ["Nunzio Onorati <nunzioonorati@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.92"
itertools = "0.13.0"
highs-sys = { version = "1.5.0", features = ["discover"], optional = true }
highs = { version = "1.5.0", optional = true }
good_lp = { version = "1.9.0", default-features = false, features = ["highs"], optional = true }

[dev-dependencies]

[features]
default = ["graphs"]
graphs = []
lpmodels = ["highs", "highs-sys", "good_lp"]