[package]
name = "domino-lib"
description = "Domino library, create sequences and puzzles, solve and validate them in rust"
license = "MIT"
version = "0.1.1"
edition = "2021"
authors = ["Nunzio Onorati <nunzioonorati@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.92"