[package]
name = "domino-cli"
description = "Domino cli, simple usage and installation of the domino-lib"
authors = ["Nunzio Onorati <nunzioonorati@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/DominoOrg/domino-lib"


[dependencies]
domino-lib = "*"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0.140"
