[package]
name = "domino-lib"
version = "2.0.0"
description = "Domino library, create sequences and puzzles, solve and validate them in rust"
repository = "https://github.com/DominoOrg/domino-lib"
license = "MIT"
edition = "2021"
authors = ["Nunzio Onorati <nunzioonorati@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.92"
good_lp = { version = "1.9.0", default-features = false, features = ["highs"]}
itertools = "0.13.0"
serde_json = "1.0.39"
serde = "1.0.188"
